WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210169
fastclick.com: A Gradient banner is missing
https://bugs.webkit.org/show_bug.cgi?id=210169
Summary
fastclick.com: A Gradient banner is missing
alan
Reported
2020-04-07 18:51:01 PDT
<
rdar://problem/60680979
>
Attachments
Patch
(6.18 KB, patch)
2020-04-07 19:26 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-04-07 19:26:18 PDT
Created
attachment 395765
[details]
Patch
EWS
Comment 2
2020-04-07 20:36:11 PDT
Committed
r259701
: <
https://trac.webkit.org/changeset/259701
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395765
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug