fastclick.com: A Gradient banner is missing https://bugs.webkit.org/show_bug.cgi?id=210169 <rdar://problem/60680979>

Reviewed by Simon Fraser.

Source/WebCore:

This patch ensures that if the non-fixed specified size for the background content computes to be a close-to-zero value, we produce at least one device pixel size content.
(and this is similar to what we do for FillSizeType::Contain/Cover.)

Test: fast/backgrounds/generated-bck-image-with-small-relative-size.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::calculateFillTileSize const):

LayoutTests:

* fast/backgrounds/generated-bck-image-with-small-relative-size-expected.html: Added.
* fast/backgrounds/generated-bck-image-with-small-relative-size.html: Added.


Canonical link: https://commits.webkit.org/223064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259701 268f45cc-cd09-0410-ab3c-d52691b4dbfc